[project]
name = "energy-trading-app"
version = "1.0.0"
description = "Energy Trading Analytics Platform - A comprehensive data engineering application for analyzing UK day-ahead electricity market data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Energy Trading Team" }
]
keywords = ["energy", "trading", "analytics", "machine-learning", "streamlit", "polars"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Data Processing
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # Machine Learning
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    # Visualization
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    # Utilities
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
# Deep learning support for LSTM model
deep-learning = [
    "tensorflow>=2.15.0",
]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
# All optional dependencies
all = [
    "energy-trading-app[deep-learning,dev]",
]

[project.urls]
Homepage = "https://github.com/example/energy-trading-app"
Documentation = "https://github.com/example/energy-trading-app#readme"
Repository = "https://github.com/example/energy-trading-app"

[project.scripts]
energy-trading = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
